--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hallo Welt!</h1>
-</body>
+<html lang="en"> 
+    <head> 
+        <meta charset="utf-8">
+        <title>My Webpage</title>
+    </head>
+    <body> 
+        <h1>Hi Friends it's me</h1>
+    </body>
 </html>
