Headings and paragraphs

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -5,6 +5,13 @@
         <title>My Webpage</title>
     </head>
     <body> 
-        <h1>Hi Friends it's me</h1>
+        <!--<strong> is used to make letters bold.</strong>-->
+        <h1>Hi friends it's me</h1>
+        <h2>My name is</h2>
+        <h3>Welcome to html</h3>
+        <!--Headings go from h1 to h6-->
+        <p><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.</strong></p>
+        <!--<em> is used to place emphasis and makes the letters italics.</em>-->
+        <p>Iure, aspernatur itaque id ipsam fugit sint maxime, <em>eaque cum sapiente voluptate reprehenderit earum harum dignissimos,</em> sunt molestiae necessitatibus voluptatibus mollitia optio.</p>
     </body>
 </html>
