--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -5,13 +5,17 @@
         <title>My Webpage</title>
     </head>
     <body> 
-        <!--<strong> is used to make letters bold.</strong>-->
         <h1>Hi friends it's me</h1>
-        <h2>My name is</h2>
+        <h2>Ich heise Kari</h2>
         <h3>Welcome to html</h3>
         <!--Headings go from h1 to h6-->
-        <p><strong>Lorem ipsum dolor sit amet consectetur adipisicing elit.</strong></p>
-        <!--<em> is used to place emphasis and makes the letters italics.</em>-->
-        <p>Iure, aspernatur itaque id ipsam fugit sint maxime, <em>eaque cum sapiente voluptate reprehenderit earum harum dignissimos,</em> sunt molestiae necessitatibus voluptatibus mollitia optio.</p>
+
+        <!--<em> is used to place emphasis and indicate verbal stress.</em>-->
+        <!--<strong> is used to indicate importance, seriousness or urgency in text without changing the meaning of the content.</strong>-->
+        <!--<i>conveys a different mood or voice. Used with thoughts, foreign words, idiomatic expressions etc.-->
+        <!--<b>draws attention to words without conveying extra importance-->
+
+        <p><i>Lorem ipsum <strong>dolor</strong> sit amet consectetur adipisicing elit.</i></p>
+        <p><b>Iure</b>, aspernatur itaque id ipsam fugit sint maxime, <em>eaque cum sapiente voluptate reprehenderit earum harum dignissimos,</em> sunt molestiae necessitatibus voluptatibus mollitia optio.</p>
     </body>
 </html>
