Attributes in ordered lists

--- a/html-boilerplate/lists.html
+++ b/html-boilerplate/lists.html
@@ -7,6 +7,9 @@
     <body>
         <!--<ul>defines unordered lists-->
         <!--<ol>defines ordered lists-->
+        <!--<reversed>orders items from highest to lowest-->
+        <!--<start>shows which number to start counting from-->
+        <!--<type>sets the numbering type-->
         <h1>Today's lists</h1>
         <p>
             <h2>Favorite foods</h2>
